# Work2

./: pyproject.toml  readme.md
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_145eef247bfb46b6___init___py.html  z_145eef247bfb46b6_classes_py.html  z_145eef247bfb46b6_main_py.html  z_145eef247bfb46b6_utils_py.html
src/: classes.py  main.py  utils.py
tests/: classes_test.py  utils_test.py
